--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -25,6 +25,9 @@
   box-sizing: border-box;
 }
 
+li {
+  list-style: none;
+}
 // ヘッダー
 .header_nav {
   height: 100px;
@@ -33,7 +36,6 @@
 
 .header_logo {
   height: auto;
-  margin-right: 150px;
 }
 
 /* 検索ボックス */
@@ -87,6 +89,15 @@ dl.searchbox dd{
   padding-left: 1150px;
 }
 
+.navbar-toggler {
+  margin-right: 40px;
+}
+
+.navbar-toggler-icon {
+  background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 30 30'
+  xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgba(51, 51, 51, 1)'
+  stroke-width='3' stroke-miterlimit='10' d='M4 7h22M4 15h22M4 23h22'/%3E%3C/svg%3E");
+}
 // post/new
 .new-post {
   color : #666;
