--- a/app/views/user/comments/_index.html.erb
+++ b/app/views/user/comments/_index.html.erb
@@ -1,9 +1,8 @@
 <%= comments.count %>件のコメント
-<h6 class="more" data-toggle="collapse" data-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">もっと見る....</h6>
 <% comments.first(2).each do |comment| %>
   <% unless comment.id.nil? %>
-    <li class="comment-container" id="comment-<%= comment.id %>">
-     <div class="comment-box">
+    <li class="comment-container border px-3 py-3 mx-2 my-2" id="comment-<%= comment.id %>">
+      <div class="comment-box">
         <div class="comment-avatar">
           <%= attachment_image_tag comment.user, :profile_image, fallback: "no_image.jpg", class:"comment-image rounded-circle", size: "40x40" %>
          </div>
@@ -21,18 +20,19 @@
                 <%= comment.created_at.strftime('%Y/%m/%d %H:%M:%S') %>
              </span>
          </div>
-     </div>
+      </div>
     </li>
   <% end %>
 <% end %>
+<h6 class="more" data-toggle="collapse" data-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">もっと見る....</h6>
 <!-- コメント内容(3件目以降) ------------------------------------------------------------------>
 <div class="collapse" id="collapseExample">
    <% comments.offset(2).each do |comment| %>
      <% unless comment.id.nil? %>
-       <li class="comment-container" id="comment-<% comment.id %>">
+       <li class="comment-container border px-3 py-3 mx-2 my-2" id="comment-<% comment.id %>">
            <div class="comment-box">
                <div class="comment-avatar">
-                   <%= attachment_image_tag comment.user, :profile_image, fallback: "no_image.jpg", class:"comment-image", size: "40x40" %>
+                   <%= attachment_image_tag comment.user, :profile_image, fallback: "no_image.jpg", class:"comment-image rounded-circle", size: "40x40" %>
                </div>
                <div class="comment-text">
                    <p><%= link_to "@#{comment.user.name}", user_path(comment.user.id) %></p>
