--- a/app/views/user/posts/show.html.erb
+++ b/app/views/user/posts/show.html.erb
@@ -1,5 +1,5 @@
 <div class="container">
-  <div class="card w-75 mx-auto my-4 shadow-lg">
+  <div class="card w-75 mx-auto mt-4 shadow-lg">
     <div class="card-body">
       <div class="row">
         <table class="table table-hover table-invers">
@@ -22,8 +22,9 @@
               タイトル : <%= @post.title %>
             <% end %>
             </p>
-            <%= @post.body %><br>
-
+            <p class="card-body">
+              <%= @post.body %><br>
+            </p>
             <%= attachment_image_tag @post, :image, size: '600x450', class:"attachment product product_image fallback"%><br>
             <% if @post.user == current_user %>
               <%= link_to '編集', edit_post_path(@post), class: "btn btn-sm btn-success edit_post_#{@post.id}" %>
@@ -32,24 +33,37 @@
           </div>
         </table>
       </div>
-      <div class="row">
-        <div class="col-5 offset-7">
+      <div class="row border-bottom">
+        <div class="col-1 offset-2 mt-3">
+          <div id="index_good_<%= @post.id %>">
+            <%= render 'user/goods/good', post: @post %>
+          </div>
+        </div>
+        <div class="col-1 mt-3">
+          <div id="index_bad_<%= @post.id %>">
+            <%= render 'user/bads/bad', post: @post %>
+          </div>
+        </div>
+        <div class="col-5 offset-3">
           <% if user_signed_in? %>
             <div class="comment-create">
               <%= render 'user/comments/form', comment: @comment, post: @post %>
             </div>
           <% end %>
-        <br>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-8 offset-1">
+          <li class="comment-create">
+            <h3 class="text-left title my-4 text-dark">レビュー</h3>
+          </li>
+          <ul>
+            <li id="comments_area">
+              <%= render 'user/comments/index', comments: @comments %>
+            </li>
+          </ul>
         </div>
       </div>
     </div>
   </div>
-      <div class=""></div>
-      <ul>
-        <li class="comment-create">
-          <h3 class="text-left title">レビュー</h3>
-        </li>
-        <li id="comments_area">
-          <%= render 'user/comments/index', comments: @comments %>
-        </li>
-      </ul>
+</div>
