--- a/app/assets/stylesheets/user/homes.scss
+++ b/app/assets/stylesheets/user/homes.scss
@@ -2,21 +2,28 @@
 #box{
   height: 600px;
 }
+
 .image1 {
-  background-image: image-url(/assets/pf_image1.jpeg);
+  background-image: image-url("/assets/pf_image1.jpeg");
 }
+
 .image2 {
-  background-image: image-url(/assets/pf_image2.jpeg);
+  background-image: image-url("/assets/pf_image2.jpeg");
 }
+
 .image3 {
-  background-image: image-url(/assets/pf_image3.webp);
+  background-image: image-url("/assets/pf_image3.webp");
 }
+
 .image4 {
-  background-image: image-url(/assets/pf_image4.webp);
+  background-image: image-url("/assets/pf_image4.webp");
 }
+
 .image5 {
-  background-image: image-url(/assets/pf_image7.jpg);
+  background-image: image-url("/assets/pf_image7.jpg");
 }
+
 .image6 {
-  background-image: image-url(/assets/pf_image6.jpeg);
+  background-image: image-url("/assets/pf_image6.jpeg");
 }
+
